# mod-connector

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  PRESET-FORMAT.md  README.md  run-tests.sh
.github/workflows/: build.yml  tests.yml
examples/: CMakeLists.txt  lv_conf.h  lvgl-slider.cpp
src/: config.h  connector.cpp  connector.hpp  custom-styling.hpp  hmi.cpp  hmi.hpp  host.cpp  host.hpp  instance_mapper.cpp  instance_mapper.hpp  ipc.cpp  ipc.hpp  lv2.cpp  lv2.hpp  main.cpp  mod-protocol.h  tests.cpp  utils.cpp  utils.hpp  websocket.cpp  websocket.hpp
src/sha1/: sha1.c
test-blocks/: Makefile
test-blocks/src/: test1in1out.c  test2in2out.c  testblock.c  testsidein.c  testsideout.c
test-blocks/ttl/: test1in1out.ttl  test2in2out.ttl  testsidein.ttl  testsideout.ttl
tests/: index.html  websocket.js
tests/buildlib/: CMakeLists.txt  main.cpp
tests/test_routings/: CMakeLists.txt  main.cpp  test-routings.sh
utils/: mod-connector.service
